--- a/Scorekeeper_HTML.html
+++ b/Scorekeeper_HTML.html
@@ -35,6 +35,7 @@
                                 <option value="8">8</option>
                                 <option value="9">9</option>
                                 <option value="10">10</option>
+                                <option value="10">11</option>
                             </select>
                         </div>
                     </div>
